Parte 2/Grupo_03/D/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> IDENTIFIER EQUALS expression SEMI
Rule 2     statement -> expression SEMI
Rule 3     expression -> expression PLUS expression
Rule 4     expression -> expression MINUS expression
Rule 5     expression -> expression TIMES expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> LPAREN expression RPAREN
Rule 8     expression -> NUMBER
Rule 9     expression -> FLOAT
Rule 10    expression -> STRING
Rule 11    expression -> IDENTIFIER
Rule 12    expression -> LBRACKET expression_list RBRACKET
Rule 13    expression -> LBRACKET RBRACKET
Rule 14    expression_list -> expression_list COMMA expression
Rule 15    expression_list -> expression
Rule 16    expression -> IDENTIFIER LPAREN expression RPAREN
Rule 17    expression -> IDENTIFIER LPAREN expression COMMA expression RPAREN
Rule 18    expression -> MAP LPAREN expression RPAREN
Rule 19    expression -> FOLD LPAREN expression COMMA expression RPAREN
Rule 20    statement -> FUNCAO IDENTIFIER LPAREN params RPAREN COLON expression SEMI
Rule 21    statement -> FUNCAO IDENTIFIER LPAREN params RPAREN COLON statement_list FIM
Rule 22    params -> params COMMA IDENTIFIER
Rule 23    params -> IDENTIFIER
Rule 24    params -> empty
Rule 25    statement_list -> statement_list statement
Rule 26    statement_list -> statement
Rule 27    statement -> ESCREVER LPAREN expression RPAREN SEMI
Rule 28    statement -> ESCREVER LPAREN expression COMMA expression RPAREN SEMI
Rule 29    empty -> <empty>

Terminals, with rules where they appear

COLON                : 20 21
COMMA                : 14 17 19 22 28
DIVIDE               : 6
EQUALS               : 1
ESCREVER             : 27 28
FIM                  : 21
FLOAT                : 9
FOLD                 : 19
FUNCAO               : 20 21
IDENTIFIER           : 1 11 16 17 20 21 22 23
LBRACKET             : 12 13
LPAREN               : 7 16 17 18 19 20 21 27 28
MAP                  : 18
MINUS                : 4
NUMBER               : 8
PLUS                 : 3
RBRACKET             : 12 13
RPAREN               : 7 16 17 18 19 20 21 27 28
SEMI                 : 1 2 20 27 28
STRING               : 10
TIMES                : 5
error                : 

Nonterminals, with rules where they appear

empty                : 24
expression           : 1 2 3 3 4 4 5 5 6 6 7 14 15 16 17 17 18 19 19 20 27 28 28
expression_list      : 12 14
params               : 20 21 22
statement            : 25 26 0
statement_list       : 21 25

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . IDENTIFIER EQUALS expression SEMI
    (2) statement -> . expression SEMI
    (20) statement -> . FUNCAO IDENTIFIER LPAREN params RPAREN COLON expression SEMI
    (21) statement -> . FUNCAO IDENTIFIER LPAREN params RPAREN COLON statement_list FIM
    (27) statement -> . ESCREVER LPAREN expression RPAREN SEMI
    (28) statement -> . ESCREVER LPAREN expression COMMA expression RPAREN SEMI
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    IDENTIFIER      shift and go to state 2
    FUNCAO          shift and go to state 4
    ESCREVER        shift and go to state 6
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    statement                      shift and go to state 1
    expression                     shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> IDENTIFIER . EQUALS expression SEMI
    (11) expression -> IDENTIFIER .
    (16) expression -> IDENTIFIER . LPAREN expression RPAREN
    (17) expression -> IDENTIFIER . LPAREN expression COMMA expression RPAREN

    EQUALS          shift and go to state 13
    SEMI            reduce using rule 11 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 11 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 11 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 11 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 11 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 14


state 3

    (2) statement -> expression . SEMI
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    SEMI            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19


state 4

    (20) statement -> FUNCAO . IDENTIFIER LPAREN params RPAREN COLON expression SEMI
    (21) statement -> FUNCAO . IDENTIFIER LPAREN params RPAREN COLON statement_list FIM

    IDENTIFIER      shift and go to state 20


state 5

    (7) expression -> LPAREN . expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 21

state 6

    (27) statement -> ESCREVER . LPAREN expression RPAREN SEMI
    (28) statement -> ESCREVER . LPAREN expression COMMA expression RPAREN SEMI

    LPAREN          shift and go to state 23


state 7

    (8) expression -> NUMBER .

    SEMI            reduce using rule 8 (expression -> NUMBER .)
    PLUS            reduce using rule 8 (expression -> NUMBER .)
    MINUS           reduce using rule 8 (expression -> NUMBER .)
    TIMES           reduce using rule 8 (expression -> NUMBER .)
    DIVIDE          reduce using rule 8 (expression -> NUMBER .)
    RPAREN          reduce using rule 8 (expression -> NUMBER .)
    RBRACKET        reduce using rule 8 (expression -> NUMBER .)
    COMMA           reduce using rule 8 (expression -> NUMBER .)


state 8

    (9) expression -> FLOAT .

    SEMI            reduce using rule 9 (expression -> FLOAT .)
    PLUS            reduce using rule 9 (expression -> FLOAT .)
    MINUS           reduce using rule 9 (expression -> FLOAT .)
    TIMES           reduce using rule 9 (expression -> FLOAT .)
    DIVIDE          reduce using rule 9 (expression -> FLOAT .)
    RPAREN          reduce using rule 9 (expression -> FLOAT .)
    RBRACKET        reduce using rule 9 (expression -> FLOAT .)
    COMMA           reduce using rule 9 (expression -> FLOAT .)


state 9

    (10) expression -> STRING .

    SEMI            reduce using rule 10 (expression -> STRING .)
    PLUS            reduce using rule 10 (expression -> STRING .)
    MINUS           reduce using rule 10 (expression -> STRING .)
    TIMES           reduce using rule 10 (expression -> STRING .)
    DIVIDE          reduce using rule 10 (expression -> STRING .)
    RPAREN          reduce using rule 10 (expression -> STRING .)
    RBRACKET        reduce using rule 10 (expression -> STRING .)
    COMMA           reduce using rule 10 (expression -> STRING .)


state 10

    (12) expression -> LBRACKET . expression_list RBRACKET
    (13) expression -> LBRACKET . RBRACKET
    (14) expression_list -> . expression_list COMMA expression
    (15) expression_list -> . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    RBRACKET        shift and go to state 25
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression_list                shift and go to state 24
    expression                     shift and go to state 26

state 11

    (18) expression -> MAP . LPAREN expression RPAREN

    LPAREN          shift and go to state 27


state 12

    (19) expression -> FOLD . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 28


state 13

    (1) statement -> IDENTIFIER EQUALS . expression SEMI
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 29

state 14

    (16) expression -> IDENTIFIER LPAREN . expression RPAREN
    (17) expression -> IDENTIFIER LPAREN . expression COMMA expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 30

state 15

    (2) statement -> expression SEMI .

    $end            reduce using rule 2 (statement -> expression SEMI .)
    FIM             reduce using rule 2 (statement -> expression SEMI .)
    IDENTIFIER      reduce using rule 2 (statement -> expression SEMI .)
    FUNCAO          reduce using rule 2 (statement -> expression SEMI .)
    ESCREVER        reduce using rule 2 (statement -> expression SEMI .)
    LPAREN          reduce using rule 2 (statement -> expression SEMI .)
    NUMBER          reduce using rule 2 (statement -> expression SEMI .)
    FLOAT           reduce using rule 2 (statement -> expression SEMI .)
    STRING          reduce using rule 2 (statement -> expression SEMI .)
    LBRACKET        reduce using rule 2 (statement -> expression SEMI .)
    MAP             reduce using rule 2 (statement -> expression SEMI .)
    FOLD            reduce using rule 2 (statement -> expression SEMI .)


state 16

    (3) expression -> expression PLUS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 31

state 17

    (4) expression -> expression MINUS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 32

state 18

    (5) expression -> expression TIMES . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 33

state 19

    (6) expression -> expression DIVIDE . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 34

state 20

    (20) statement -> FUNCAO IDENTIFIER . LPAREN params RPAREN COLON expression SEMI
    (21) statement -> FUNCAO IDENTIFIER . LPAREN params RPAREN COLON statement_list FIM

    LPAREN          shift and go to state 35


state 21

    (7) expression -> LPAREN expression . RPAREN
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19


state 22

    (11) expression -> IDENTIFIER .
    (16) expression -> IDENTIFIER . LPAREN expression RPAREN
    (17) expression -> IDENTIFIER . LPAREN expression COMMA expression RPAREN

    RPAREN          reduce using rule 11 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 11 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 11 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 11 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 11 (expression -> IDENTIFIER .)
    RBRACKET        reduce using rule 11 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 11 (expression -> IDENTIFIER .)
    SEMI            reduce using rule 11 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 14


state 23

    (27) statement -> ESCREVER LPAREN . expression RPAREN SEMI
    (28) statement -> ESCREVER LPAREN . expression COMMA expression RPAREN SEMI
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 37

state 24

    (12) expression -> LBRACKET expression_list . RBRACKET
    (14) expression_list -> expression_list . COMMA expression

    RBRACKET        shift and go to state 38
    COMMA           shift and go to state 39


state 25

    (13) expression -> LBRACKET RBRACKET .

    SEMI            reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    PLUS            reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    MINUS           reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    TIMES           reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    DIVIDE          reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    RPAREN          reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 13 (expression -> LBRACKET RBRACKET .)
    COMMA           reduce using rule 13 (expression -> LBRACKET RBRACKET .)


state 26

    (15) expression_list -> expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    RBRACKET        reduce using rule 15 (expression_list -> expression .)
    COMMA           reduce using rule 15 (expression_list -> expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19


state 27

    (18) expression -> MAP LPAREN . expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 40

state 28

    (19) expression -> FOLD LPAREN . expression COMMA expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . NUMBER
    (9) expression -> . FLOAT
    (10) expression -> . STRING
    (11) expression -> . IDENTIFIER
    (12) expression -> . LBRACKET expression_list RBRACKET
    (13) expression -> . LBRACKET RBRACKET
    (16) expression -> . IDENTIFIER LPAREN expression RPAREN
    (17) expression -> . IDENTIFIER LPAREN expression COMMA expression RPAREN
    (18) expression -> . MAP LPAREN expression RPAREN
    (19) expression -> . FOLD LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    STRING          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    LBRACKET        shift and go to state 10
    MAP             shift and go to state 11
    FOLD            shift and go to state 12

    expression                     shift and go to state 41

state 29

    (1) statement -> IDENTIFIER EQUALS expression . SEMI
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    SEMI            shift and go to state 42
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19


state 30

    (16) expression -> IDENTIFIER LPAREN expression . RPAREN
    (17) expression -> IDENTIFIER LPAREN expression . COMMA expression RPAREN
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 43
    COMMA           shift and go to state 44
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19


state 31

    (3) expression -> expression PLUS expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 3 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 3 (expression -> expression PLUS expression .)
    RBRACKET        reduce using rule 3 (expression -> expression PLUS expression .)
    COMMA           reduce using rule 3 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19

  ! PLUS            [ reduce using rule 3 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 3 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 3 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 3 (expression -> expression PLUS expression .) ]


state 32

    (4) expression -> expression MINUS expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 4 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 4 (expression -> expression MINUS expression .)
    RBRACKET        reduce using rule 4 (expression -> expression MINUS expression .)
    COMMA           reduce using rule 4 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
